--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -37,7 +37,7 @@ requirements:
     - cython
     - gdal >=3.1.2,!=3.3.0
     - flask
-    - numpy >=1.11.0,!=1.16.0,<1.22.0
+    - numpy >=1.11.0,!=1.16.0
     - {{ pin_compatible('numpy') }}
     - openpyxl
     - pandas >=1.2.1
@@ -50,7 +50,7 @@ requirements:
     - qtpy >1.3
     - requests
     - rtree >=0.8.2,!=0.9.1
-    - scipy >=1.6.0
+    - scipy >=1.6.0,<1.8.0
     - shapely >=1.7.1,<2.0.0
     - taskgraph >=0.11.0
 
