--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,8 +12,8 @@ source:
 build:
   number: 0
   script:
-    - {{ PYTHON }} -m build --wheel --no-isolation
-    - {{ PYTHON }} -m build --sdist --no-isolation
+    - {{ PYTHON }} -m build --wheel --no-isolation -x
+    - {{ PYTHON }} -m build --sdist --no-isolation -x
     - {{ PYTHON }} -m pip install --no-deps --no-index --only-binary natcap.invest --find-links=dist "natcap.invest=={{ version }}"
 
 
