Correcting runtime requirements in conda requirements to match project requirements.txt.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -35,7 +35,7 @@ requirements:
     - babel
     - chardet >=3.0.4
     - cython
-    - gdal >=3.1.2,!=3.3.0
+    - gdal >=3.1.2,!=3.3.0,<3.4.1
     - flask
     - flask_cors
     - six
@@ -53,7 +53,7 @@ requirements:
     - requests
     - rtree >=0.8.2,!=0.9.1
     - scipy >=1.6.0,<1.8.0
-    - shapely >=1.7.1,<2.0.0
+    - shapely >=1.7.1,<1.8.2,<2.0.0
     - taskgraph >=0.11.0
 
 test:
