--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -36,13 +36,14 @@ requirements:
     - babel
     - chardet >=3.0.4
     - cython
-    - gdal >=3.1.2,!=3.3.0,<3.4.1
+    - gdal >=3.4.2
     - flask
     - flask_cors
     - six
     - numpy >=1.11.0,!=1.16.0
     - {{ pin_compatible('numpy') }}
     - openpyxl
+    - xlrd
     - pandas >=1.2.1
     - pint
     - psutil >=5.6.6
@@ -52,9 +53,9 @@ requirements:
     - qtawesome
     - qtpy >1.3
     - requests
-    - rtree >=0.8.2,!=0.9.1
-    - scipy >=1.6.0,<1.9.0
-    - shapely >=1.7.1,<1.8.2,<2.0.0
+    - rtree >=0.8.2,!=0.9.1>=3.4.2
+    - scipy >=1.9.0
+    - shapely >=1.7.1,<1.8.2
     - taskgraph >=0.11.0
 
 test:
