--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -53,7 +53,7 @@ requirements:
     - qtawesome
     - qtpy >1.3
     - requests
-    - rtree >=0.8.2,!=0.9.1>=3.4.2
+    - rtree >=0.8.2,!=0.9.1
     - scipy >=1.9.0
     - shapely >=1.7.1,<1.8.2
     - taskgraph >=0.11.0
