--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,14 +22,14 @@ requirements:
   build:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
-    - cython                                 # [build_platform != target_platform]
+    - cython <3.0.0                          # [build_platform != target_platform]
     - numpy                                  # [build_platform != target_platform]
     - {{ compiler('cxx') }}
   host:
     - python
     - pip
     - babel
-    - cython
+    - cython <3.0.0
     - numpy
     - setuptools_scm
     - setuptools
@@ -40,7 +40,7 @@ requirements:
     - babel
     - chardet >=3.0.4
     - cython
-    - gdal >=3.4.2
+    - gdal >=3.4.2,<3.7.0
     - flask
     - flask_cors
     - six
@@ -51,7 +51,7 @@ requirements:
     - pandas >=1.2.1
     - pint
     - psutil >=5.6.6
-    - pygeoprocessing >=2.4.0
+    - pygeoprocessing ==2.4.0
     - pyro4 ==4.77
     - requests
     - rtree >=0.8.2,!=0.9.1
@@ -69,8 +69,8 @@ test:
 
 about:
   home: https://github.com/natcap/invest
-  license: BSD-3-Clause
-  license_family: BSD
+  license: Apache-2.0
+  license_family: Apache
   license_file: LICENSE.txt
   summary: 'InVEST: models that map and value the goods and services from nature that sustain and fulfill human life.'
   description: |
