Removing the cython cap in host requirements.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,7 +29,7 @@ requirements:
     - python
     - pip
     - babel
-    - cython <3.0.0
+    - cython
     - numpy
     - setuptools_scm
     - setuptools
