--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,14 +22,14 @@ requirements:
   build:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
-    - cython                                 # [build_platform != target_platform]
+    - cython <3.0.0                          # [build_platform != target_platform]
     - numpy                                  # [build_platform != target_platform]
     - {{ compiler('cxx') }}
   host:
     - python
     - pip
     - babel
-    - cython
+    - cython <3.0.0
     - numpy
     - setuptools_scm
     - setuptools
@@ -39,7 +39,7 @@ requirements:
     - python
     - babel
     - chardet >=3.0.4
-    - cython
+    - cython <3.0.0
     - gdal >=3.4.2,<3.6.0
     - flask
     - flask_cors
