--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -41,7 +41,7 @@ requirements:
     - babel
     - chardet >=3.0.4
     - cython <3.0.0
-    - gdal >=3.4.2,<3.6.0
+    - gdal >=3.4.2
     - flask
     - flask_cors
     - six
