--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,7 +22,7 @@ requirements:
   build:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
-    - cython <3.0.0                          # [build_platform != target_platform]
+    - cython                                 # [build_platform != target_platform]
     - numpy                                  # [build_platform != target_platform]
     - {{ compiler('cxx') }}
     - {{ stdlib("c") }}
@@ -30,7 +30,7 @@ requirements:
     - python
     - pip
     - babel
-    - cython <3.0.0
+    - cython
     - numpy
     - setuptools_scm
     - setuptools
@@ -40,7 +40,7 @@ requirements:
     - python
     - babel
     - chardet >=3.0.4
-    - cython <3.0.0
+    - cython
     - gdal >=3.4.2
     - flask
     - flask_cors
