--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: 23e470fc6288aa6ae8bc83e366223ac9a09321415b94b98be1cfe6281c51b86d
 
 build:
-  skip: true  # [py==37]
+  skip: true  # [py==312]
   number: 1
   script:
     - {{ PYTHON }} -m build --wheel --no-isolation -x
@@ -41,7 +41,7 @@ requirements:
     - babel
     - chardet >=3.0.4
     - cython <3.0.0
-    - gdal >=3.4.2
+    - gdal >=3.4.2,<3.6.0
     - flask
     - flask_cors
     - six
