Attempting to use a different gdal version for pyhton 3.12.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -41,7 +41,8 @@ requirements:
     - babel
     - chardet >=3.0.4
     - cython <3.0.0
-    - gdal >=3.4.2,<3.6.0
+    - gdal >=3.4.2,<3.6.0  # [py<312]
+    - gdal <=3.8            # [py==312]
     - flask
     - flask-cors
     - six
