--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,8 +24,8 @@ requirements:
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - cython >3.0.0                          # [build_platform != target_platform]
     - numpy  <2                              # [build_platform != target_platform]
-    - {{ compiler('cxx') }}                  # [build_platform != target_platform]
-    - {{ stdlib("c") }}                      # [build_platform != target_platform]
+    - {{ compiler('cxx') }}
+    - {{ stdlib("c") }}
   host:
     - python
     - pip
