--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,6 +24,7 @@ requirements:
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - cython >3.0.0                          # [build_platform != target_platform]
     - numpy                                  # [build_platform != target_platform]
+    - gdal >=3.4.2
     - {{ compiler('cxx') }}
     - {{ stdlib("c") }}
   host:
@@ -46,6 +47,7 @@ requirements:
     - gdal >=3.4.2
     - flask
     - flask-cors
+    - geometamaker
     - numpy >=1.11.0,!=1.16.0
     - pandas >=1.2.1
     - pint
