--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ build:
   skip: true  # [py==37]
   number: 0
   script_env:
-    - NATCAP_INVEST_GDAL_LIB_PATH="$LIBRARY_PREFIX"
+    - NATCAP_INVEST_GDAL_LIB_PATH="$CONDA_PREFIX/Library"
   script:
     - {{ PYTHON }} -m build --wheel --no-isolation -x
     - {{ PYTHON }} -m build --sdist --no-isolation -x
@@ -36,7 +36,7 @@ requirements:
     - cython >3.0.0
     - numpy
     - setuptools_scm
-    - setuptools
+    - setuptools>=77.0  # For PEP 639 license syntax update
     - wheel
     - python-build
   run:
