update to Pyro5

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -55,7 +55,7 @@ requirements:
     - pint
     - psutil >=5.6.6
     - pygeoprocessing >=2.4.6
-    - pyro4 ==4.77
+    - pyro5
     - requests
     - rtree >=0.8.2,!=0.9.1
     - scipy >=1.9.0
