--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,6 +34,7 @@ requirements:
     - pip
     - babel
     - cython >3.0.0
+    - gdal >=3.4.2
     - numpy
     - setuptools_scm
     - setuptools >=77.0  # For PEP 639 license syntax update
