--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "natcap.invest" %}
-{% set version = "3.14.3" %}
+{% set version = "3.15.0" %}
 
 package:
   name: {{ name|lower }}
@@ -7,11 +7,13 @@ package:
 
 source:
   url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/{{ name.replace(".", "_") }}-{{ version }}.tar.gz
-  sha256: 45a8b3e565108c3b287aeb00cbaade251e7ffd6a5b9f96c5c43c3fd01bf3a228
+  sha256: 2a2171759b3a2eb70703d8faa8146dbca895964c453a237e7b20510f9f8b50d1
 
 build:
   skip: true  # [py==37]
-  number: 3
+  number: 0
+  script_env:
+    - NATCAP_INVEST_GDAL_LIB_PATH={{ CONDA_PREFIX }}/Library
   script:
     - {{ PYTHON }} -m build --wheel --no-isolation -x
     - {{ PYTHON }} -m build --sdist --no-isolation -x
@@ -31,9 +33,10 @@ requirements:
     - pip
     - babel
     - cython >3.0.0
+    - gdal >=3.4.2
     - numpy
     - setuptools_scm
-    - setuptools
+    - setuptools >=77.0  # For PEP 639 license syntax update
     - wheel
     - python-build
   run:
@@ -46,12 +49,13 @@ requirements:
     - gdal >=3.4.2
     - flask
     - flask-cors
+    - geometamaker
     - numpy >=1.11.0,!=1.16.0
     - pandas >=1.2.1
     - pint
     - psutil >=5.6.6
     - pygeoprocessing >=2.4.6
-    - pyro4 ==4.77
+    - pyro5
     - requests
     - rtree >=0.8.2,!=0.9.1
     - scipy >=1.9.0
