gdal should be a weak run export in order to export from host reqs.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,8 +23,7 @@ build:
   entry_points:
     - invest = natcap.invest.cli:main
   run_exports:
-    strong:
-      gdal
+    - gdal
 
 requirements:
   build:
