--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,7 +34,7 @@ requirements:
     - pip
     - babel
     - cython >3.0.0
-    - libgdal-core
+    - libgdal-core <3.11  # for compatibility with rasterio, which doesn't yet support gdal 3.11
     - numpy
     - setuptools_scm
     - setuptools >=77.0  # For PEP 639 license syntax update
