--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
 
 build:
   skip: true  # [py==37]
-  number: 0
+  number: 1
   script_env:
     - NATCAP_INVEST_GDAL_LIB_PATH={{ CONDA_PREFIX }}/Library
   script:
@@ -55,7 +55,7 @@ requirements:
     - pandas >=1.2.1
     - pint
     - psutil >=5.6.6
-    - pygeoprocessing >=2.4.6
+    - pygeoprocessing >=2.4.6,<2.4.10
     - pyro5
     - requests
     - rtree >=0.8.2,!=0.9.1
